[gd_scene load_steps=13 format=3 uid="uid://b8w1bgk3il3op"]

[ext_resource type="Script" path="res://enemy.gd" id="1_jnkpe"]
[ext_resource type="Texture2D" uid="uid://d08u63gf0bw8y" path="res://images/cricket_angry.png" id="2_jbg2r"]
[ext_resource type="Texture2D" uid="uid://b6cakaejb3ga7" path="res://images/cricket_clear.png" id="2_o4p84"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pe6j1"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_iquvn"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CylinderMesh" id="CylinderMesh_kbhlc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_yh6he"]

[sub_resource type="SphereShape3D" id="SphereShape3D_yg8qy"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_q4sjo"]
points = PackedVector3Array(0, -3, 0, 7.5, -3, -6, -7.5, -3, -6, -7.5, 3, -6, 7.5, 3, -6, 0, 3, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_373ll"]
atlas = ExtResource("2_jbg2r")
region = Rect2(0, 0, 200, 251)

[sub_resource type="AtlasTexture" id="AtlasTexture_igvhp"]
atlas = ExtResource("2_o4p84")
region = Rect2(0, 0, 157, 335)

[sub_resource type="SpriteFrames" id="SpriteFrames_pay5r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_373ll")
}],
"loop": true,
"name": &"Chase",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igvhp")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[node name="Enemy" type="CharacterBody3D" node_paths=PackedStringArray("waypoints")]
script = ExtResource("1_jnkpe")
waypoints = [null]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_pe6j1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_iquvn")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.127682, -0.00034659, 0.00106318, -0.00106076, 0.000882375, 0.12768, -0.000353917, -0.127684, 0.000879462, 0, 0.490506, -0.62265)
visible = false
mesh = SubResource("CylinderMesh_kbhlc")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="PatrolTimer" type="Timer" parent="."]
one_shot = true

[node name="HearingFar" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HearingFar"]
transform = Transform3D(36.1453, 0, 0, 0, 36.1453, 0, 0, 0, 36.1453, 0, 0, 0)
shape = SubResource("SphereShape3D_yh6he")

[node name="HearingClose" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HearingClose"]
transform = Transform3D(11.3104, 0, 0, 0, 11.3104, 0, 0, 0, 11.3104, 0, 0, 0)
shape = SubResource("SphereShape3D_yg8qy")

[node name="Sight" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sight"]
shape = SubResource("ConvexPolygonShape3D_q4sjo")

[node name="Head" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.559574, 0)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.364159, 0)
billboard = 2
sprite_frames = SubResource("SpriteFrames_pay5r")
animation = &"Chase"
autoplay = "Idle"

[connection signal="timeout" from="PatrolTimer" to="." method="_on_patrol_timer_timeout"]
[connection signal="body_entered" from="HearingFar" to="." method="_on_hearing_far_body_entered"]
[connection signal="body_exited" from="HearingFar" to="." method="_on_hearing_far_body_exited"]
[connection signal="body_entered" from="HearingClose" to="." method="_on_hearing_close_body_entered"]
[connection signal="body_exited" from="HearingClose" to="." method="_on_hearing_close_body_exited"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_sight_body_exited"]
